# axum-rust

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs
crates/services/web-server/examples/: quick_dev.rs
examples/: quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql
src/: log.rs  main.rs  model.rs
src/_dev_utils/: mod.rs
src/config/: error.rs  mod.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs
src/model/store/: error.rs  mod.rs
src/pwd/: hmac_hasher.rs  mod.rs
src/utils/: b64.rs  mod.rs  time.rs
src/web/: error.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
