[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
# Axum
axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tower-cookies = "0.9.0"
# Serde
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
# Other
lazy-regex = "3.1.0"
async-trait = "0.1.74"
strum_macros = "0.25.3"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.8"
