[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
# Axum
axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tower-cookies = "0.9.0"
# Serde
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Data
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query = "0.30.3"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-uuid",
] }
modql = { version = "0.3.4", features = ["with-sea-query"] }
# Hash
hmac = "0.12.1"
sha2 = "0.10.8"
# Other
lazy-regex = "3.1.0"
async-trait = "0.1.74"
strum_macros = "0.25.3"
uuid = { version = "1.6.1", features = ["v4"] }
derive_more = "0.99.17"
base64 = "0.21.5"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.8"
